sample/TypeError/ex4.py
def example_function(arg1, arg2):
    print(arg1 + arg2)

var1 = "20"
example_function(10, var1)
example_function("30", 40)
example_function(50, 60)